fix: mobile nav
-Fix issues with mobile nav-bar when user is authenticated. Remove styling that causes an unwanted gap on the left side. Hide profile image and score preview when burger menu is active.

--- a/client/src/components/navigation/styles/NavBar.module.css
+++ b/client/src/components/navigation/styles/NavBar.module.css
@@ -24,6 +24,12 @@
   }
 }
 
+
+.profile {
+  display: flex;
+}
+
+
 .logo-long,
 .logo-com {
   filter: invert(100%) sepia(3%) saturate(7040%) hue-rotate(280deg)
@@ -65,9 +71,6 @@
 }
 
 @media (min-width: 640px) {
-  .nav-bar {
-    animation: fadeTransform 0.2s ease-in forwards;
-  }
 
   @keyframes fadeTransform {
     0% {
@@ -87,7 +90,8 @@
   .main-nav,
   .profile-stats,
   .burger-close,
-  .login-menu {
+  .login-menu,
+  .profile {
     display: none;
   }
 
@@ -104,7 +108,7 @@
 
     animation: fadeIn 0.2s ease-in forwards;
   }
-
+  
   /* Toggle mobile nav */
   nav input:checked + .burger-label {
     .burger-close {
